assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Gemunu+Libre:wght@279&family=Montserrat&display=swap');

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-size: 20px;
}

body {
    font-family: 'Gemunu Libre', sans-serif;
    font-family: 'Montserrat', sans-serif;
    font-weight: 200;
    color: #0d0e0e;
    background-position: center;
    background-attachment: fixed;
    background-size: cover;
}


/*main body styles*/
.body {
    display: grid;
    grid-template-rows: repeat(auto-fit);
    grid-template-columns: repeat(auto-fit);
    gap: 10px;
    padding: 10px;
    width: auto;
    margin: 20px auto;
}

/*Title link*/
.header {
    display: grid;
    grid-template-rows: repeat(auto-fit);
    grid-template-columns: repeat(auto-fit);
    justify-content: center;
    align-items: center;
    border: #4a4a4a;
    border-radius: 10px;
    box-shadow: 0 0 10px rgba(0, 0, 0, .2);
    padding: 0;
    position: relative;
    grid-gap: 10px;
    height: 80px;
    width: auto;
    margin: 10px auto;
}

#logo {
    text-transform: uppercase;
    text-decoration: none;
    letter-spacing: 3px;
    font-size: 280%;
    color: #252525;
}


/*Navigation links*/
.nav-links {
    display: grid;
    grid-template-rows: repeat(auto-fit);
    border: solid 2px #4a4a4a;
    padding: 10px;
    border-radius: 10px;
    box-shadow: 0 0 10px rgba(0, 0, 0, .2);
}

nav > ul {
    display: inline;
    list-style-type: none;
    text-align: left !important;
    letter-spacing: 3px;
    margin: 10px 30px 10px 0;
    font-weight: 600;
}

a {
    position: relative;
    display: inline-block;
    font-size: 110%;
    font-weight: 800;
    color: #4a4a4a;
    overflow: hidden;
    background: linear-gradient(to left, rgb(13, 13, 17), rgb(13, 13, 17) 50%, #4a4a4a 50%);
    background-clip: text;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    background-size: 200% 100%;
    background-position: 100%;
    transition: background-position 275ms ease;
}

a:hover {
    background-position: 0 100%;
}


.active {
    border-bottom: solid 2px #4a4a4a;
    border-radius: 20%;
}

/*Main text*/
.main {
    display: grid;
    grid-template-rows: repeat(auto-fit);
    grid-template-columns: repeat(auto-fit);
    border: solid 2px #4a4a4a;
    padding: 10px;
    border-radius: 10px;
    letter-spacing: 0.25px;
    box-shadow: 0 0 10px rgba(0, 0, 0, .2);
}


/*Footer*/
.footer {
    display: grid;
    grid-template-rows: repeat(auto-fit);
    grid-template-columns: repeat(auto-fit);
    border: solid 2px #4a4a4a;
    border-radius: 10px;
    letter-spacing: 1px;
    justify-content: center;
    align-items: center;
    font-size: 150%;
}

.social {
    list-style: none;
    text-align: center;
    letter-spacing: 3px;
    margin: 10px 30px 10px 0;
    font-weight: 600;
    
}
.social > li {
    display: inline;
    font-size: 110%;
}

footer > p {
    font-size: x-small;
    text-align: center;
}

